--- a/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
@@ -45,7 +45,7 @@
             href="https://www.google.com/"
             class="button-mh-60 bg-primary shadow-sm w-50"
             [routerLink]="['/admin-login-access']"
-            >Admin Panel</a
+            >Admin Login</a
           >
         </div>
       </form>
