--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -9,8 +9,8 @@
       </div>
       <div>
         <a mat-flat-button [routerLink]="[ '/employee-code']"
-          class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join the
-            Celebration</span></a>
+          class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join Us
+          </span></a>
       </div>
     </header>
   </section>
@@ -146,7 +146,7 @@
           <div class="text-center pt-5">
             <a mat-flat-button [routerLink]="[ '/employee-code']"
               class="px-5 py-4 button-mh-60 bg-dark shadow-sm">
-              <span>Start your Journey</span><mat-icon>celebration</mat-icon></a>
+              <span>Get Started</span><mat-icon>celebration</mat-icon></a>
           </div>
         </div>
       </div>
