--- a/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
@@ -14,7 +14,7 @@
         href="https://www.google.com/"
         class="bg-dark py-3 shadow-sm button-mh-45"
         [routerLink]="['/employee-code']"
-        ><span>Employee Login</span></a
+        ><mat-icon>celebration</mat-icon><span>Access your Rewards</span></a
       >
     </header>
   </section>
@@ -52,25 +52,25 @@
           (ngSubmit)="onSubmit()"
           class="mt-5"
         >
-          <h4 class="fw-bold mb-0">Administrator Code</h4>
+          <h4 class="fw-bold mb-1">Administrator Code</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="administratorCode" />
             <mat-icon matSuffix>redeem</mat-icon>
             @if
             (this.administratorForm.get("administratorCode")?.hasError("required"))
             {
-            <mat-error>This is required</mat-error> }
+            <mat-error>This is Required</mat-error> }
           </mat-form-field>
-          <h4 class="fw-bold mb-0">Administrator Key</h4>
+          <h4 class="fw-bold mb-1">Administrator Key</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="administratorKey" />
             <mat-icon matSuffix>vpn_key</mat-icon>
             @if
             (this.administratorForm.get("administratorKey")?.hasError("required"))
             {
-            <mat-error>This is required</mat-error> }
+            <mat-error>This is Required</mat-error> }
           </mat-form-field>
-          <div class="d-flex mt-2">
+          <div class="mt-2">
             <button
               mat-flat-button
               class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
