--- a/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
@@ -22,7 +22,7 @@
 
   <!-- main-section -->
   <section
-    class="container min-vh-100 d-flex justify-content-center align-items-center"
+    class="container d-flex justify-content-center align-items-center"
   >
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
@@ -65,5 +65,16 @@
     </div>
   </section>
   <!-- /main-section -->
+
+  <!-- footer section -->
+  <section class="py-4 bg-dark shadow-sm text-white mt-4">
+    <footer class="container">
+      <div class="d-flex justify-content-center align-items-center pt-2">
+        <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
+        reserved by SparkNest.
+      </div>
+    </footer>
+  </section>
+  <!-- /footer section -->
 </section>
 <!-- /container -->
