--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -1,7 +1,23 @@
 <!-- container-section -->
 <section
-  class="container min-vh-100 d-flex justify-content-center align-items-center"> 
+  class="container-fluid p-0"> 
+    <!-- header section -->
+    <section class="bg-light shadow-sm">
+      <header
+        class="container d-flex justify-content-between align-items-center py-3"
+      >
+        <div class="logo-font">
+          <span class="text-dark fw-bold">Spark</span>
+          <span class="text-primary">Nest</span>
+        </div>
+        <a mat-flat-button [routerLink]="[ '/']"
+        class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join Us
+        </span></a>
+      </header>
+    </section>
+    <!-- /header section  -->
    <!-- main-section -->
+    <section class="container">
   <div class="row justify-content-center align-items-center">
     <div class="col-5">
       <div class="banner-font fw-bold">
@@ -31,6 +47,18 @@
     </div>
       <!-- /image-section -->
   </div>
+</section>
   <!-- /main-section -->
+
+  <!-- footer section -->
+  <section class="py-4 bg-dark shadow-sm text-white">
+    <footer class="container">
+      <div class="d-flex justify-content-center align-items-center pt-2">
+        <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
+        reserved by SparkNest.
+      </div>
+    </footer>
+  </section>
+  <!-- /footer section -->
 </section>
 <!-- /container-section -->
