--- a/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
@@ -22,7 +22,7 @@
 
   <!-- main-section -->
   <section
-    class="container d-flex justify-content-center align-items-center"
+    class="container min-vh-100 d-flex justify-content-center align-items-center"
   >
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
