--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -17,7 +17,7 @@
     </section>
     <!-- /header section  -->
    <!-- main-section -->
-    <section class="container">
+    <section class="container min-vh-100 d-flex justify-content-center align-items-center">
   <div class="row justify-content-center align-items-center">
     <div class="col-5">
       <div class="banner-font fw-bold">
@@ -51,7 +51,7 @@
   <!-- /main-section -->
 
   <!-- footer section -->
-  <section class="py-4 bg-dark shadow-sm text-white">
+  <section class="footer py-4 bg-dark shadow-sm text-white mt-5">
     <footer class="container">
       <div class="d-flex justify-content-center align-items-center pt-2">
         <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
@@ -59,6 +59,7 @@
       </div>
     </footer>
   </section>
+ 
   <!-- /footer section -->
 </section>
 <!-- /container-section -->
