error-page-modified

--- a/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
@@ -1,5 +1,5 @@
 <!-- container-section -->
-<section class="container-fluid p-0">
+<section class="container-fluid p-0 vh-100 d-flex justify-content-between flex-sm-column">
   <!-- header section -->
   <section class="bg-light shadow-sm">
     <header
@@ -22,7 +22,7 @@
 
   <!-- main-section -->
   <section
-    class="container min-vh-100 d-flex justify-content-center align-items-center"
+    class="container d-flex justify-content-center align-items-center my-5"
   >
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
