--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <!-- container-section -->
 <section
-  class="container-fluid p-0"> 
+  class="container-fluid p-0 vh-100 d-flex justify-content-between flex-sm-column"> 
     <!-- header section -->
     <section class="bg-light shadow-sm">
       <header
@@ -17,7 +17,7 @@
     </section>
     <!-- /header section  -->
    <!-- main-section -->
-    <section class="container min-vh-100 d-flex justify-content-center align-items-center">
+    <section class="container  d-flex justify-content-center align-items-center my-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-5">
       <div class="banner-font fw-bold">
