--- a/client/webUI/src/styles.css
+++ b/client/webUI/src/styles.css
@@ -52,6 +52,9 @@ body {
  .logo-font {
   font-size: 2rem;
 }
+ .vh-100{
+  height: 100vh;
+ }
 
 /*snackbar-error*/
 .snackbar-error .mat-mdc-snackbar-surface {
