--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
 <p>dashboard works!</p>
-<a [routerLink]="['/admin-dashboard/add-gift-item']">Add Product</a>
+<a [routerLink]="['/admin/add-gift-item']">Add Product</a>
