--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,8 +1,8 @@
 <!-- Sidebar -->
 <nav class="sidebar">
-    <a [routerLink]="['/admin-dashboard/dashboard']">Dashboard</a>
-    <a [routerLink]="['//admin-dashboard/gift-inventory']">Gift Inventory</a>
-    <a [routerLink]="['/admin-dashboard/employee-picks']">Employee Picks</a>
-    <a [routerLink]="['/admin-dashboard/product-reports']">Product Reports</a>
-    <a [routerLink]="['/admin-dashboard/settings']">Settings</a>
+    <a [routerLink]="['/admin/dashboard']">Dashboard</a>
+    <a [routerLink]="['/admin/gift-inventory']">Gift Inventory</a>
+    <a [routerLink]="['/admin/employee-picks']">Employee Picks</a>
+    <a [routerLink]="['/admin/product-reports']">Product Reports</a>
+    <a [routerLink]="['/admin/settings']">Settings</a>
 </nav>
