--- a/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
@@ -6,8 +6,8 @@
       class="container d-flex justify-content-between align-items-center py-3"
     >
       <div class="logo-font">
-        <span class="text-dark fw-bold">Spark</span>
-        <span class="text-primary">Nest</span>
+        <span class="text-dark fw-bold">Choice</span>
+        <span class="text-primary">Chase</span>
       </div>
       <a
         mat-flat-button
@@ -90,7 +90,7 @@
     <footer class="container">
       <div class="d-flex justify-content-center align-items-center pt-2">
         <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
-        reserved by SparkNest.
+        reserved by ChoiceChase.
       </div>
     </footer>
   </section>
