change the headings

--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -32,8 +32,7 @@
           Choose, click, and celebrate with ease!
         </div>
         <div class="text-center mt-4">
-          <a mat-flat-button [routerLink]="[ '/employee-code']"
-            class="px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
+          <a mat-flat-button [routerLink]="[ '/employee-code']" class="px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
             <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a>
         </div>
       </div>
@@ -66,33 +65,33 @@
   <section class="container py-5">
     <div class="row justify-content-center text-center">
       <div class="col-12">
-        <div class="h3 fw-bold mb-0">How it works</div>
+        <div class="h3 fw-bold mb-0">How it Works</div>
         <div>A simple journey to your perfect gift!</div>
       </div>
     </div>
     <div class="row text-center pt-5">
       <div class="col-4">
         <img src="assets/images/svg-number-one.svg" />
-        <div class="h5">Scan the QR code</div>
+        <div class="h5">Login with Code</div>
         <div>
-          When it’s time to swap info, have your new contact scan your QR code
-          with their phone camera..
+          Log in with your employee code to unlock a world of gifts. Simply enter your unique code to browse and
+          choose the gift that suits you..
         </div>
       </div>
       <div class="col-4">
         <img src="assets/images/svg-number-two.svg" />
-        <div class="h5">Send a message</div>
+        <div class="h5">Choose your Gift</div>
         <div>
-          Your QR code is linked to a custom message you’ve created. So all they
-          have to do is hit Send..
+          Browse through a curated selection of gifts and pick the one that suits you best. Your perfect gift is just a
+          click away—make your choice today..
         </div>
       </div>
       <div class="col-4">
         <img src="assets/images/svg-number-three.svg" />
-        <div class="h5">Scan the QR code</div>
+        <div class="h5">Celebrate your Gift</div>
         <div>
-          At the end of the event, you can quickly scan your inbox and reply to
-          everyone you met.
+          A gift to cherish! Celebrate the joy and excitement that comes with your special gift. It’s your moment to
+          enjoy something meaningful and unforgettable..
         </div>
       </div>
     </div>
@@ -102,16 +101,16 @@
       <div class="row justify-content-between align-items-center">
         <div class="col-12">
           <div class="row justify-content-center">
-            <div class="col-3">
+            <div class="col-4">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/login-image.jpg" />
                 <div
                   class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
-                  <span>Login with Us</span> <mat-icon class="ms-1">celebration</mat-icon>
+                  <span>Login with Code</span> <mat-icon class="ms-1">celebration</mat-icon>
                 </div>
               </mat-card>
             </div>
-            <div class="col-3">
+            <div class="col-4">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/gift-selection.png" class="bg-light" />
                 <div
@@ -119,17 +118,8 @@
                   <span>Choose your Gift</span> <mat-icon class="ms-1">celebration</mat-icon>
                 </div>
               </mat-card>
-            </div>
-            <div class="col-3">
-              <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                <img mat-card-image src="assets/images/gifts.png" class="bg-light" />
-                <div
-                  class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
-                  <span>Select your Gift</span> <mat-icon class="ms-1">celebration</mat-icon>
-                </div>
-              </mat-card>
-            </div>
-            <div class="col-3">
+            </div>            
+            <div class="col-4">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/gift-announcement.png" class="bg-light" />
                 <div
@@ -144,8 +134,7 @@
       <div class="row">
         <div class="col-12">
           <div class="text-center pt-5">
-            <a mat-flat-button [routerLink]="[ '/employee-code']"
-              class="px-5 py-4 button-mh-60 bg-dark shadow-sm">
+            <a mat-flat-button [routerLink]="[ '/employee-code']" class="px-5 py-4 button-mh-60 bg-dark shadow-sm">
               <span>Get Started</span><mat-icon>celebration</mat-icon></a>
           </div>
         </div>
