made gift section

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -1,112 +1,5 @@
-.background-overlay {
-    background-color: rgba(248, 251, 252, 0.65);
-    min-height: 100vh;
+/* gift-section */
+.gift-card{
+    border-radius: 3%;
 }
-
-.select-gift-page {
-    width: 900px;
-    margin: auto;
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.title-span-parent {
-    position: relative;
-}
-
-/* main title */
-.main-title {
-    margin-bottom: 50px;
-}
-
-/* title lg */
-.title-lg {
-    font-weight: bold;
-    margin-bottom: 5px;
-    position: relative;
-}
-
-.title-lg span {
-    color: #eb7d2e;
-}
-
-/* voucher-card */
-.voucher-card-row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.voucher-card {
-    background: #fff;
-    width: 28%;
-    padding: 15px;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-    margin-bottom: 20px;
-    position: relative;
-    border: 1px solid #d9e0e6;
-}
-
-.product-img {
-    overflow: hidden;
-    position: relative;
-}
-
-.product-title {
-    font-weight: 500;
-}
-
-.select-voucher-opacity {
-    opacity: 0.1;
-}
-
-.gif-bg {
-    background-image: url(../../../../assets/images/gift-animation.gif);
-    background-repeat: no-repeat;
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    right: -80px;
-    top: -40px;
-    background-size: contain;
-}
-
-.checked-svg {
-    position: absolute;
-    left: 25%;
-    top: 25%;
-}
-
-/* btn lg */
-.btn-md {
-    display: block;
-    height: 40px;
-    width: 100%;
-    color: white !important;
-    background-color: #000 !important;
-    border-radius: 3px !important;
-    letter-spacing: 1px;
-    cursor: pointer;
-    font-weight: bold;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-}
-
-.product-code {
-    border: 1px dashed #000;
-    width: fit-content;
-    padding: 4px 8px;
-    font-weight: 500;
-    font-size: 14px;
-    margin-bottom: 10px;
-}
-
-.bg-gift-icon {
-    background-image: url(../../../../assets/images/people-gift.png);
-    background-repeat: no-repeat;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    height: 400px;
-    width: 400px;
-    background-size: contain;
-}
+/* /gift-section */
