update banner section

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -14,129 +14,155 @@
         </header>
     </section>
     <!-- /header section  -->
-    <!-- banner-section -->
-    <section class="container-fluid">
-        <div class="row p-5">
-            <div class="col-4">
-                <h1>Find your perfect eyewear look</h1>
-                <p>We'r all about finding you that perfect pair, Experience the difference a perfect pair makes.Let's
-                    find yours together.</p>
-            </div>
-            <div class="col-8">
-                <div class="row">
-                    <div class="col-4">
-                        <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                            <img mat-card-image src="assets/images/login-image.jpg" />
-                            <div
-                                class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
-                                <span>Login with Code</span> <mat-icon class="ms-1">celebration</mat-icon>
-                            </div>
-                        </mat-card>
-                    </div>
-                    <div class="col-4">
-                        <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                            <img mat-card-image src="assets/images/login-image.jpg" />
-                            <div
-                                class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
-                                <span>Login with Code</span> <mat-icon class="ms-1">celebration</mat-icon>
-                            </div>
-                        </mat-card>
-                    </div>
-                    <div class="col-4">
-                        <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                            <img mat-card-image src="assets/images/login-image.jpg" />
-                            <div
-                                class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
-                                <span>Login with Code</span> <mat-icon class="ms-1">celebration</mat-icon>
-                            </div>
-                        </mat-card>
-                    </div>
+</section>
+<!-- banner-section -->
+<section class="container">
+    <div class="row py-5">
+        <div class="col-5">            
+            <div class="banner-font fw-bold">
+                Unlock Your <span class="text-primary">Gift,</span> Embrace the
+                <span class="text-primary">Moment!</span>
+              </div>
+              <div class="mt-4">
+                Discover a world of rewards made just for you! Enter your unique code
+                and browse a curated selection of gifts tailored to bring joy. With
+                every choice, a moment of celebration awaits. Whether it’s a small
+                token or a grand surprise, your perfect gift is only a click away.
+                Choose, click, and celebrate with ease!
+              </div>
+        </div>
+        <div class="col-7">
+            <div class="row">
+                <div class="col-4">
+                    <mat-card class="example-card" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        <div
+                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
+                        </div>
+                    </mat-card>
+                </div>
+                <div class="col-4">
+                    <mat-card class="example-card" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        <div
+                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
+                        </div>
+                    </mat-card>
+                </div>
+                <div class="col-4">
+                    <mat-card class="example-card" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        <div
+                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
+                        </div>
+                    </mat-card>
+                </div>
+                <div class="col-4">
+                    <mat-card class="example-card" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        <div
+                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
+                        </div>
+                    </mat-card>
+                </div>
+                <div class="col-4">
+                    <mat-card class="example-card" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        <div
+                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
+                        </div>
+                    </mat-card>
+                </div>
+                <div class="col-4">
+                    <mat-card class="example-card" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        <div
+                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
+                        </div>
+                    </mat-card>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- /banner-section -->
-    <!-- gift-section -->
-    <section class="container-fluid p-5">
-        <div>
-            <h1>New Arrivals</h1>
+    </div>
+</section>
+<!-- /banner-section -->
+<!-- gift-section -->
+<section class="container py-5">
+    <div>
+        <h1>New Arrivals</h1>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h5>Best seller</h5>
+                    </mat-card-title>
+                </mat-card-header>
+                <img mat-card-image src="assets/images/gift-card.png" />
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h5 class="mb-0">Copper Bottle</h5>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
+                    </div>
+
+                </mat-card-footer>
+            </mat-card>
         </div>
-        <div class="row">
-            <div class="col-4">
-                <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
-                    <mat-card-header>
-                        <mat-card-title>
-                            <h5>Best seller</h5>
-                        </mat-card-title>
-                    </mat-card-header>
-                    <img mat-card-image src="assets/images/gift-card.png" />
-                    <mat-card-footer class="p-3">
+        <div class="col-4">
+            <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h5>Best seller</h5>
+                    </mat-card-title>
+                </mat-card-header>
+                <img mat-card-image src="assets/images/gift-card.png" />
+                <mat-card-footer class="p-3">
+                    <div>
                         <div>
-                            <div>
-                                <h5 class="mb-0">Copper Bottle</h5>
-                            </div>
-                            <div>stylish,eco-friendly</div>
+                            <h5 class="mb-0">Copper Bottle</h5>
                         </div>
-                        <div>
-                            <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
-                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
+                    </div>
 
-                    </mat-card-footer>
-                </mat-card>
-            </div>
-            <div class="col-4">
-                <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
-                    <mat-card-header>
-                        <mat-card-title>
-                            <h5>Best seller</h5>
-                        </mat-card-title>
-                    </mat-card-header>
-                    <img mat-card-image src="assets/images/gift-card.png" />
-                    <mat-card-footer class="p-3">
-                        <div>
-                            <div>
-                                <h5 class="mb-0">Copper Bottle</h5>
-                            </div>
-                            <div>stylish,eco-friendly</div>
-                        </div>
-                        <div>
-                            <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
-                        </div>
-
-                    </mat-card-footer>
-                </mat-card>
-            </div>
-            <div class="col-4">
-                <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
-                    <mat-card-header>
-                        <mat-card-title>
-                            <h5>Best seller</h5>
-                        </mat-card-title>
-                    </mat-card-header>
-                    <img mat-card-image src="assets/images/gift-card.png" />
-                    <mat-card-footer class="p-3">
-                        <div>
-                            <div>
-                                <h5 class="mb-0">Copper Bottle</h5>
-                            </div>
-                            <div>stylish,eco-friendly</div>
-                        </div>
-                        <div>
-                            <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
-                        </div>
-
-                    </mat-card-footer>
-                </mat-card>
-            </div>
+                </mat-card-footer>
+            </mat-card>
         </div>
-    </section>
-    <!-- /gift-section -->
+        <div class="col-4">
+            <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h5>Best seller</h5>
+                    </mat-card-title>
+                </mat-card-header>
+                <img mat-card-image src="assets/images/gift-card.png" />
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h5 class="mb-0">Copper Bottle</h5>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
+                    </div>
 
+                </mat-card-footer>
+            </mat-card>
+        </div>
+    </div>
+</section>
+<!-- /gift-section -->
 
-
-
-
-
+<section class="container-fluid p-0">
     <!-- footer section -->
     <section class="py-4 bg-dark shadow-sm text-white">
         <footer class="container">
