added color class

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -1,3 +1,10 @@
+/* global-css */
+
+.bg-lilac{
+    background-color: #efedfc;
+}
+/* /global-css */
+
 /* gift-section */
 .gift-card{
     border-radius: 3%;
