--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -17,7 +17,7 @@
 </section>
 <!-- banner-section -->
 <section class="container">
-    <div class="row py-5">
+    <div class="row py-5 align-items-center">
         <div class="col-5">            
             <div class="banner-font fw-bold">
                 Unlock Your <span class="text-primary">Gift,</span> Embrace the
@@ -33,7 +33,13 @@
         </div>
         <div class="col-7">
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 mb-4">
+                    <mat-card class="example-card bg-lilac" appearance="outlined">
+                        <img mat-card-image src="assets/images/login-image.jpg" />
+                        
+                    </mat-card>
+                </div>
+                <div class="col-4 mb-4">
                     <mat-card class="example-card" appearance="outlined">
                         <img mat-card-image src="assets/images/login-image.jpg" />
                         <div
@@ -41,15 +47,7 @@
                         </div>
                     </mat-card>
                 </div>
-                <div class="col-4">
-                    <mat-card class="example-card" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
-                        <div
-                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
-                        </div>
-                    </mat-card>
-                </div>
-                <div class="col-4">
+                <div class="col-4 mb-4">
                     <mat-card class="example-card" appearance="outlined">
                         <img mat-card-image src="assets/images/login-image.jpg" />
                         <div
